feat: 对齐企业级 Agent 执行事件